# fe-lock-service

./: .env.example  .gitignore  Cargo.toml  README.md  requirements.txt  test_lock_service.py
src/: config.rs  handlers.rs  main.rs  models.rs
src/storage/: memory.rs  mod.rs  redis.rs
